# qcm-jellyfin-plugin

./: .gitignore  CMakeLists.txt  Cargo.toml
include/jellyfin/: type.h
include/jellyfin/api/: OAIActivityLogApi.h  OAIApiKeyApi.h  OAIArtistsApi.h  OAIAudioApi.h  OAIBrandingApi.h  OAIChannelsApi.h  OAIClientLogApi.h  OAICollectionApi.h  OAIConfigurationApi.h  OAIDashboardApi.h  OAIDevicesApi.h  OAIDisplayPreferencesApi.h  OAIDynamicHlsApi.h  OAIEnvironmentApi.h  OAIFilterApi.h  OAIGenresApi.h  OAIHlsSegmentApi.h  OAIImageApi.h  OAIInstantMixApi.h  OAIItemLookupApi.h  OAIItemRefreshApi.h  OAIItemUpdateApi.h  OAIItemsApi.h  OAILibraryApi.h  OAILibraryStructureApi.h  OAILiveTvApi.h  OAILocalizationApi.h  OAILyricsApi.h  OAIMediaInfoApi.h  OAIMoviesApi.h  OAIMusicGenresApi.h  OAIPackageApi.h  OAIPersonsApi.h  OAIPlaylistsApi.h  OAIPlaystateApi.h  OAIPluginsApi.h  OAIQuickConnectApi.h  OAIRemoteImageApi.h  OAIScheduledTasksApi.h  OAISearchApi.h  (+19 more)
include/jellyfin/model/: OAIAccessSchedule.h  OAIActivityLogEntry.h  OAIActivityLogEntryMessage.h  OAIActivityLogEntryQueryResult.h  OAIActivityLogEntryStartMessage.h  OAIActivityLogEntryStopMessage.h  OAIAddVirtualFolderDto.h  OAIAlbumInfo.h  OAIAlbumInfoRemoteSearchQuery.h  OAIAllThemeMediaResult.h  OAIArtistInfo.h  OAIArtistInfoRemoteSearchQuery.h  OAIAudioSpatialFormat.h  OAIAuthenticateUserByName.h  OAIAuthenticationInfo.h  OAIAuthenticationInfoQueryResult.h  OAIAuthenticationResult.h  OAIBaseItemDto.h  OAIBaseItemDtoImageBlurHashes.h  OAIBaseItemDtoQueryResult.h  OAIBaseItemKind.h  OAIBaseItemPerson.h  OAIBaseItemPersonImageBlurHashes.h  OAIBookInfo.h  OAIBookInfoRemoteSearchQuery.h  OAIBoxSetInfo.h  OAIBoxSetInfoRemoteSearchQuery.h  OAIBrandingOptions.h  OAIBufferRequestDto.h  OAICastReceiverApplication.h  OAIChannelFeatures.h  OAIChannelItemSortField.h  OAIChannelMappingOptionsDto.h  OAIChannelMediaContentType.h  OAIChannelMediaType.h  OAIChannelType.h  OAIChapterInfo.h  OAIClientCapabilities.h  OAIClientCapabilitiesDto.h  OAIClientLogDocumentResponseDto.h  (+294 more)
jellyfin-api/: Cargo.toml  README.md
jellyfin-api/.openapi-generator/: FILES
jellyfin-api/src/apis/: activity_log_api.rs  api_key_api.rs  artists_api.rs  audio_api.rs  branding_api.rs  channels_api.rs  client_log_api.rs  collection_api.rs  configuration.rs  configuration_api.rs  dashboard_api.rs  devices_api.rs  display_preferences_api.rs  environment_api.rs  filter_api.rs  genres_api.rs  hls_segment_api.rs  image_api.rs  instant_mix_api.rs  item_lookup_api.rs  item_refresh_api.rs  item_update_api.rs  items_api.rs  library_api.rs  library_structure_api.rs  live_tv_api.rs  localization_api.rs  lyrics_api.rs  media_info_api.rs  media_segments_api.rs  mod.rs  movies_api.rs  music_genres_api.rs  package_api.rs  persons_api.rs  playlists_api.rs  playstate_api.rs  plugins_api.rs  quick_connect_api.rs  remote_image_api.rs  (+20 more)
jellyfin-api/src/models/: access_schedule.rs  activity_log_entry.rs  activity_log_entry_message.rs  activity_log_entry_query_result.rs  activity_log_entry_start_message.rs  activity_log_entry_stop_message.rs  add_virtual_folder_dto.rs  album_info.rs  album_info_remote_search_query.rs  all_theme_media_result.rs  artist_info.rs  artist_info_remote_search_query.rs  audio_spatial_format.rs  authenticate_user_by_name.rs  authentication_info.rs  authentication_info_query_result.rs  authentication_result.rs  base_item_dto.rs  base_item_dto_image_blur_hashes.rs  base_item_dto_query_result.rs  base_item_kind.rs  base_item_person.rs  base_item_person_image_blur_hashes.rs  book_info.rs  book_info_remote_search_query.rs  box_set_info.rs  box_set_info_remote_search_query.rs  branding_options.rs  buffer_request_dto.rs  cast_receiver_application.rs  channel_features.rs  channel_item_sort_field.rs  channel_mapping_options_dto.rs  channel_media_content_type.rs  channel_media_type.rs  channel_type.rs  chapter_info.rs  client_capabilities_dto.rs  client_log_document_response_dto.rs  codec_profile.rs  (+302 more)
qml_plugin/: .qmlls.ini  CMakeLists.txt  api.cpp  client.cpp  model.cpp  plugin.cpp  session.cpp
qml_plugin/include/service_qml_jellyfin/: api.h  client.h  export.h  info.h  model.h  session.h  type.h
qml_plugin/include/service_qml_jellyfin/api/: auth.h
qml_plugin/qml/page/: LoginPage.qml  MinePage.qml
src/: default.rs  error.rs  json.cpp  lib.rs  model.cpp  plugin.rs  provider.rs
src/api/: OAIActivityLogApi.cpp  OAIApiKeyApi.cpp  OAIArtistsApi.cpp  OAIAudioApi.cpp  OAIBrandingApi.cpp  OAIChannelsApi.cpp  OAIClientLogApi.cpp  OAICollectionApi.cpp  OAIConfigurationApi.cpp  OAIDashboardApi.cpp  OAIDevicesApi.cpp  OAIDisplayPreferencesApi.cpp  OAIDynamicHlsApi.cpp  OAIEnvironmentApi.cpp  OAIFilterApi.cpp  OAIGenresApi.cpp  OAIHlsSegmentApi.cpp  OAIImageApi.cpp  OAIInstantMixApi.cpp  OAIItemLookupApi.cpp  OAIItemRefreshApi.cpp  OAIItemUpdateApi.cpp  OAIItemsApi.cpp  OAILibraryApi.cpp  OAILibraryStructureApi.cpp  OAILiveTvApi.cpp  OAILocalizationApi.cpp  OAILyricsApi.cpp  OAIMediaInfoApi.cpp  OAIMoviesApi.cpp  OAIMusicGenresApi.cpp  OAIPackageApi.cpp  OAIPersonsApi.cpp  OAIPlaylistsApi.cpp  OAIPlaystateApi.cpp  OAIPluginsApi.cpp  OAIQuickConnectApi.cpp  OAIRemoteImageApi.cpp  OAIScheduledTasksApi.cpp  OAISearchApi.cpp  (+19 more)
