cmake_minimum_required(VERSION 3.5)

project(jellyfin-cpp)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME} STATIC

  include/jellyfin/model/OAIAccessSchedule.h
  include/jellyfin/model/OAIActivityLogEntry.h
  include/jellyfin/model/OAIActivityLogEntryMessage.h
  include/jellyfin/model/OAIActivityLogEntryQueryResult.h
  include/jellyfin/model/OAIActivityLogEntryStartMessage.h
  include/jellyfin/model/OAIActivityLogEntryStopMessage.h
  include/jellyfin/model/OAIAddVirtualFolderDto.h
  include/jellyfin/model/OAIAlbumInfo.h
  include/jellyfin/model/OAIAlbumInfoRemoteSearchQuery.h
  include/jellyfin/model/OAIAllThemeMediaResult.h
  include/jellyfin/model/OAIArtistInfo.h
  include/jellyfin/model/OAIArtistInfoRemoteSearchQuery.h
  include/jellyfin/model/OAIAudioSpatialFormat.h
  include/jellyfin/model/OAIAuthenticateUserByName.h
  include/jellyfin/model/OAIAuthenticationInfo.h
  include/jellyfin/model/OAIAuthenticationInfoQueryResult.h
  include/jellyfin/model/OAIAuthenticationResult.h
  include/jellyfin/model/OAIBaseItemDto.h
  include/jellyfin/model/OAIBaseItemDtoImageBlurHashes.h
  include/jellyfin/model/OAIBaseItemDtoQueryResult.h
  include/jellyfin/model/OAIBaseItemKind.h
  include/jellyfin/model/OAIBaseItemPerson.h
  include/jellyfin/model/OAIBaseItemPersonImageBlurHashes.h
  include/jellyfin/model/OAIBookInfo.h
  include/jellyfin/model/OAIBookInfoRemoteSearchQuery.h
  include/jellyfin/model/OAIBoxSetInfo.h
  include/jellyfin/model/OAIBoxSetInfoRemoteSearchQuery.h
  include/jellyfin/model/OAIBrandingOptions.h
  include/jellyfin/model/OAIBufferRequestDto.h
  include/jellyfin/model/OAICastReceiverApplication.h
  include/jellyfin/model/OAIChannelFeatures.h
  include/jellyfin/model/OAIChannelItemSortField.h
  include/jellyfin/model/OAIChannelMappingOptionsDto.h
  include/jellyfin/model/OAIChannelMediaContentType.h
  include/jellyfin/model/OAIChannelMediaType.h
  include/jellyfin/model/OAIChannelType.h
  include/jellyfin/model/OAIChapterInfo.h
  include/jellyfin/model/OAIClientCapabilities.h
  include/jellyfin/model/OAIClientCapabilitiesDto.h
  include/jellyfin/model/OAIClientLogDocumentResponseDto.h
  include/jellyfin/model/OAICodecProfile.h
  include/jellyfin/model/OAICodecType.h
  include/jellyfin/model/OAICollectionCreationResult.h
  include/jellyfin/model/OAICollectionType.h
  include/jellyfin/model/OAICollectionTypeOptions.h
  include/jellyfin/model/OAIConfigImageTypes.h
  include/jellyfin/model/OAIConfigurationPageInfo.h
  include/jellyfin/model/OAIContainerProfile.h
  include/jellyfin/model/OAICountryInfo.h
  include/jellyfin/model/OAICreatePlaylistDto.h
  include/jellyfin/model/OAICreateUserByName.h
  include/jellyfin/model/OAICultureDto.h
  include/jellyfin/model/OAIDayOfWeek.h
  include/jellyfin/model/OAIDayPattern.h
  include/jellyfin/model/OAIDefaultDirectoryBrowserInfoDto.h
  include/jellyfin/model/OAIDeviceInfo.h
  include/jellyfin/model/OAIDeviceInfoQueryResult.h
  include/jellyfin/model/OAIDeviceOptions.h
  include/jellyfin/model/OAIDeviceOptionsDto.h
  include/jellyfin/model/OAIDeviceProfile.h
  include/jellyfin/model/OAIDirectPlayProfile.h
  include/jellyfin/model/OAIDisplayPreferencesDto.h
  include/jellyfin/model/OAIDlnaProfileType.h
  include/jellyfin/model/OAIDownMixStereoAlgorithms.h
  include/jellyfin/model/OAIDynamicDayOfWeek.h
  include/jellyfin/model/OAIEmbeddedSubtitleOptions.h
  include/jellyfin/model/OAIEncodingContext.h
  include/jellyfin/model/OAIEncodingOptions.h
  include/jellyfin/model/OAIEndPointInfo.h
  include/jellyfin/model/OAIExternalIdInfo.h
  include/jellyfin/model/OAIExternalIdMediaType.h
  include/jellyfin/model/OAIExternalUrl.h
  include/jellyfin/model/OAIExtraType.h
  include/jellyfin/model/OAIFileSystemEntryInfo.h
  include/jellyfin/model/OAIFileSystemEntryType.h
  include/jellyfin/model/OAIFontFile.h
  include/jellyfin/model/OAIForceKeepAliveMessage.h
  include/jellyfin/model/OAIForgotPasswordAction.h
  include/jellyfin/model/OAIForgotPasswordDto.h
  include/jellyfin/model/OAIForgotPasswordPinDto.h
  include/jellyfin/model/OAIForgotPasswordResult.h
  include/jellyfin/model/OAIGeneralCommand.h
  include/jellyfin/model/OAIGeneralCommandMessage.h
  include/jellyfin/model/OAIGeneralCommandType.h
  include/jellyfin/model/OAIGetProgramsDto.h
  include/jellyfin/model/OAIGroupInfoDto.h
  include/jellyfin/model/OAIGroupInfoDtoGroupUpdate.h
  include/jellyfin/model/OAIGroupQueueMode.h
  include/jellyfin/model/OAIGroupRepeatMode.h
  include/jellyfin/model/OAIGroupShuffleMode.h
  include/jellyfin/model/OAIGroupStateType.h
  include/jellyfin/model/OAIGroupStateUpdate.h
  include/jellyfin/model/OAIGroupStateUpdateGroupUpdate.h
  include/jellyfin/model/OAIGroupUpdate.h
  include/jellyfin/model/OAIGroupUpdateType.h
  include/jellyfin/model/OAIGuideInfo.h
  include/jellyfin/model/OAIHardwareEncodingType.h
  include/jellyfin/model/OAIIPlugin.h
  include/jellyfin/model/OAIIgnoreWaitRequestDto.h
  include/jellyfin/model/OAIImageFormat.h
  include/jellyfin/model/OAIImageInfo.h
  include/jellyfin/model/OAIImageOption.h
  include/jellyfin/model/OAIImageOrientation.h
  include/jellyfin/model/OAIImageProviderInfo.h
  include/jellyfin/model/OAIImageResolution.h
  include/jellyfin/model/OAIImageSavingConvention.h
  include/jellyfin/model/OAIImageType.h
  include/jellyfin/model/OAIInboundKeepAliveMessage.h
  include/jellyfin/model/OAIInboundWebSocketMessage.h
  include/jellyfin/model/OAIInstallationInfo.h
  include/jellyfin/model/OAIIsoType.h
  include/jellyfin/model/OAIItemCounts.h
  include/jellyfin/model/OAIItemFields.h
  include/jellyfin/model/OAIItemFilter.h
  include/jellyfin/model/OAIItemSortBy.h
  include/jellyfin/model/OAIJoinGroupRequestDto.h
  include/jellyfin/model/OAIKeepUntil.h
  include/jellyfin/model/OAILibraryChangedMessage.h
  include/jellyfin/model/OAILibraryOptionInfoDto.h
  include/jellyfin/model/OAILibraryOptions.h
  include/jellyfin/model/OAILibraryOptionsResultDto.h
  include/jellyfin/model/OAILibraryTypeOptionsDto.h
  include/jellyfin/model/OAILibraryUpdateInfo.h
  include/jellyfin/model/OAIListingsProviderInfo.h
  include/jellyfin/model/OAILiveStreamResponse.h
  include/jellyfin/model/OAILiveTvInfo.h
  include/jellyfin/model/OAILiveTvOptions.h
  include/jellyfin/model/OAILiveTvServiceInfo.h
  include/jellyfin/model/OAILiveTvServiceStatus.h
  include/jellyfin/model/OAILocalizationOption.h
  include/jellyfin/model/OAILocationType.h
  include/jellyfin/model/OAILogFile.h
  include/jellyfin/model/OAILogLevel.h
  include/jellyfin/model/OAILyricDto.h
  include/jellyfin/model/OAILyricLine.h
  include/jellyfin/model/OAILyricMetadata.h
  include/jellyfin/model/OAIMediaAttachment.h
  include/jellyfin/model/OAIMediaPathDto.h
  include/jellyfin/model/OAIMediaPathInfo.h
  include/jellyfin/model/OAIMediaProtocol.h
  include/jellyfin/model/OAIMediaSourceInfo.h
  include/jellyfin/model/OAIMediaSourceType.h
  include/jellyfin/model/OAIMediaStream.h
  include/jellyfin/model/OAIMediaStreamProtocol.h
  include/jellyfin/model/OAIMediaStreamType.h
  include/jellyfin/model/OAIMediaType.h
  include/jellyfin/model/OAIMediaUpdateInfoDto.h
  include/jellyfin/model/OAIMediaUpdateInfoPathDto.h
  include/jellyfin/model/OAIMediaUrl.h
  include/jellyfin/model/OAIMessageCommand.h
  include/jellyfin/model/OAIMetadataConfiguration.h
  include/jellyfin/model/OAIMetadataEditorInfo.h
  include/jellyfin/model/OAIMetadataField.h
  include/jellyfin/model/OAIMetadataOptions.h
  include/jellyfin/model/OAIMetadataRefreshMode.h
  include/jellyfin/model/OAIMovePlaylistItemRequestDto.h
  include/jellyfin/model/OAIMovieInfo.h
  include/jellyfin/model/OAIMovieInfoRemoteSearchQuery.h
  include/jellyfin/model/OAIMusicVideoInfo.h
  include/jellyfin/model/OAIMusicVideoInfoRemoteSearchQuery.h
  include/jellyfin/model/OAINameGuidPair.h
  include/jellyfin/model/OAINameIdPair.h
  include/jellyfin/model/OAINameValuePair.h
  include/jellyfin/model/OAINetworkConfiguration.h
  include/jellyfin/model/OAINewGroupRequestDto.h
  include/jellyfin/model/OAINextItemRequestDto.h
  include/jellyfin/model/OAIOpenLiveStreamDto.h
  include/jellyfin/model/OAIOutboundKeepAliveMessage.h
  include/jellyfin/model/OAIOutboundWebSocketMessage.h
  include/jellyfin/model/OAIPackageInfo.h
  include/jellyfin/model/OAIParentalRating.h
  include/jellyfin/model/OAIPathSubstitution.h
  include/jellyfin/model/OAIPersonKind.h
  include/jellyfin/model/OAIPersonLookupInfo.h
  include/jellyfin/model/OAIPersonLookupInfoRemoteSearchQuery.h
  include/jellyfin/model/OAIPinRedeemResult.h
  include/jellyfin/model/OAIPingRequestDto.h
  include/jellyfin/model/OAIPlayAccess.h
  include/jellyfin/model/OAIPlayCommand.h
  include/jellyfin/model/OAIPlayMessage.h
  include/jellyfin/model/OAIPlayMethod.h
  include/jellyfin/model/OAIPlayQueueUpdate.h
  include/jellyfin/model/OAIPlayQueueUpdateGroupUpdate.h
  include/jellyfin/model/OAIPlayQueueUpdateReason.h
  include/jellyfin/model/OAIPlayRequest.h
  include/jellyfin/model/OAIPlayRequestDto.h
  include/jellyfin/model/OAIPlaybackErrorCode.h
  include/jellyfin/model/OAIPlaybackInfoDto.h
  include/jellyfin/model/OAIPlaybackInfoResponse.h
  include/jellyfin/model/OAIPlaybackOrder.h
  include/jellyfin/model/OAIPlaybackProgressInfo.h
  include/jellyfin/model/OAIPlaybackRequestType.h
  include/jellyfin/model/OAIPlaybackStartInfo.h
  include/jellyfin/model/OAIPlaybackStopInfo.h
  include/jellyfin/model/OAIPlayerStateInfo.h
  include/jellyfin/model/OAIPlaylistCreationResult.h
  include/jellyfin/model/OAIPlaylistUserPermissions.h
  include/jellyfin/model/OAIPlaystateCommand.h
  include/jellyfin/model/OAIPlaystateMessage.h
  include/jellyfin/model/OAIPlaystateRequest.h
  include/jellyfin/model/OAIPluginInfo.h
  include/jellyfin/model/OAIPluginInstallationCancelledMessage.h
  include/jellyfin/model/OAIPluginInstallationCompletedMessage.h
  include/jellyfin/model/OAIPluginInstallationFailedMessage.h
  include/jellyfin/model/OAIPluginInstallingMessage.h
  include/jellyfin/model/OAIPluginStatus.h
  include/jellyfin/model/OAIPluginUninstalledMessage.h
  include/jellyfin/model/OAIPreviousItemRequestDto.h
  include/jellyfin/model/OAIProblemDetails.h
  include/jellyfin/model/OAIProcessPriorityClass.h
  include/jellyfin/model/OAIProfileCondition.h
  include/jellyfin/model/OAIProfileConditionType.h
  include/jellyfin/model/OAIProfileConditionValue.h
  include/jellyfin/model/OAIProgramAudio.h
  include/jellyfin/model/OAIPublicSystemInfo.h
  include/jellyfin/model/OAIQueryFilters.h
  include/jellyfin/model/OAIQueryFiltersLegacy.h
  include/jellyfin/model/OAIQueueItem.h
  include/jellyfin/model/OAIQueueRequestDto.h
  include/jellyfin/model/OAIQuickConnectDto.h
  include/jellyfin/model/OAIQuickConnectResult.h
  include/jellyfin/model/OAIRatingType.h
  include/jellyfin/model/OAIReadyRequestDto.h
  include/jellyfin/model/OAIRecommendationDto.h
  include/jellyfin/model/OAIRecommendationType.h
  include/jellyfin/model/OAIRecordingStatus.h
  include/jellyfin/model/OAIRefreshProgressMessage.h
  include/jellyfin/model/OAIRemoteImageInfo.h
  include/jellyfin/model/OAIRemoteImageResult.h
  include/jellyfin/model/OAIRemoteLyricInfoDto.h
  include/jellyfin/model/OAIRemoteSearchResult.h
  include/jellyfin/model/OAIRemoteSubtitleInfo.h
  include/jellyfin/model/OAIRemoveFromPlaylistRequestDto.h
  include/jellyfin/model/OAIRepeatMode.h
  include/jellyfin/model/OAIRepositoryInfo.h
  include/jellyfin/model/OAIRestartRequiredMessage.h
  include/jellyfin/model/OAIScheduledTaskEndedMessage.h
  include/jellyfin/model/OAIScheduledTasksInfoMessage.h
  include/jellyfin/model/OAIScheduledTasksInfoStartMessage.h
  include/jellyfin/model/OAIScheduledTasksInfoStopMessage.h
  include/jellyfin/model/OAIScrollDirection.h
  include/jellyfin/model/OAISearchHint.h
  include/jellyfin/model/OAISearchHintResult.h
  include/jellyfin/model/OAISeekRequestDto.h
  include/jellyfin/model/OAISendCommand.h
  include/jellyfin/model/OAISendCommandType.h
  include/jellyfin/model/OAISeriesInfo.h
  include/jellyfin/model/OAISeriesInfoRemoteSearchQuery.h
  include/jellyfin/model/OAISeriesStatus.h
  include/jellyfin/model/OAISeriesTimerCancelledMessage.h
  include/jellyfin/model/OAISeriesTimerCreatedMessage.h
  include/jellyfin/model/OAISeriesTimerInfoDto.h
  include/jellyfin/model/OAISeriesTimerInfoDtoQueryResult.h
  include/jellyfin/model/OAIServerConfiguration.h
  include/jellyfin/model/OAIServerDiscoveryInfo.h
  include/jellyfin/model/OAIServerRestartingMessage.h
  include/jellyfin/model/OAIServerShuttingDownMessage.h
  include/jellyfin/model/OAISessionInfo.h
  include/jellyfin/model/OAISessionMessageType.h
  include/jellyfin/model/OAISessionUserInfo.h
  include/jellyfin/model/OAISessionsMessage.h
  include/jellyfin/model/OAISessionsStartMessage.h
  include/jellyfin/model/OAISessionsStopMessage.h
  include/jellyfin/model/OAISetChannelMappingDto.h
  include/jellyfin/model/OAISetPlaylistItemRequestDto.h
  include/jellyfin/model/OAISetRepeatModeRequestDto.h
  include/jellyfin/model/OAISetShuffleModeRequestDto.h
  include/jellyfin/model/OAISongInfo.h
  include/jellyfin/model/OAISortOrder.h
  include/jellyfin/model/OAISpecialViewOptionDto.h
  include/jellyfin/model/OAIStartupConfigurationDto.h
  include/jellyfin/model/OAIStartupRemoteAccessDto.h
  include/jellyfin/model/OAIStartupUserDto.h
  include/jellyfin/model/OAIStringGroupUpdate.h
  include/jellyfin/model/OAISubtitleDeliveryMethod.h
  include/jellyfin/model/OAISubtitleOptions.h
  include/jellyfin/model/OAISubtitlePlaybackMode.h
  include/jellyfin/model/OAISubtitleProfile.h
  include/jellyfin/model/OAISyncPlayCommandMessage.h
  include/jellyfin/model/OAISyncPlayGroupUpdateCommandMessage.h
  include/jellyfin/model/OAISyncPlayQueueItem.h
  include/jellyfin/model/OAISyncPlayUserAccessType.h
  include/jellyfin/model/OAISystemInfo.h
  include/jellyfin/model/OAITaskCompletionStatus.h
  include/jellyfin/model/OAITaskInfo.h
  include/jellyfin/model/OAITaskResult.h
  include/jellyfin/model/OAITaskState.h
  include/jellyfin/model/OAITaskTriggerInfo.h
  include/jellyfin/model/OAIThemeMediaResult.h
  include/jellyfin/model/OAITimerCancelledMessage.h
  include/jellyfin/model/OAITimerCreatedMessage.h
  include/jellyfin/model/OAITimerEventInfo.h
  include/jellyfin/model/OAITimerInfoDto.h
  include/jellyfin/model/OAITimerInfoDtoQueryResult.h
  include/jellyfin/model/OAITrailerInfo.h
  include/jellyfin/model/OAITrailerInfoRemoteSearchQuery.h
  include/jellyfin/model/OAITranscodeReason.h
  include/jellyfin/model/OAITranscodeSeekInfo.h
  include/jellyfin/model/OAITranscodingInfo.h
  include/jellyfin/model/OAITranscodingProfile.h
  include/jellyfin/model/OAITransportStreamTimestamp.h
  include/jellyfin/model/OAITrickplayInfo.h
  include/jellyfin/model/OAITrickplayOptions.h
  include/jellyfin/model/OAITrickplayScanBehavior.h
  include/jellyfin/model/OAITunerChannelMapping.h
  include/jellyfin/model/OAITunerHostInfo.h
  include/jellyfin/model/OAITypeOptions.h
  include/jellyfin/model/OAIUnratedItem.h
  include/jellyfin/model/OAIUpdateLibraryOptionsDto.h
  include/jellyfin/model/OAIUpdateMediaPathRequestDto.h
  include/jellyfin/model/OAIUpdatePlaylistDto.h
  include/jellyfin/model/OAIUpdatePlaylistUserDto.h
  include/jellyfin/model/OAIUpdateUserItemDataDto.h
  include/jellyfin/model/OAIUpdateUserPassword.h
  include/jellyfin/model/OAIUploadSubtitleDto.h
  include/jellyfin/model/OAIUserConfiguration.h
  include/jellyfin/model/OAIUserDataChangeInfo.h
  include/jellyfin/model/OAIUserDataChangedMessage.h
  include/jellyfin/model/OAIUserDeletedMessage.h
  include/jellyfin/model/OAIUserDto.h
  include/jellyfin/model/OAIUserItemDataDto.h
  include/jellyfin/model/OAIUserPolicy.h
  include/jellyfin/model/OAIUserUpdatedMessage.h
  include/jellyfin/model/OAIUtcTimeResponse.h
  include/jellyfin/model/OAIValidatePathDto.h
  include/jellyfin/model/OAIVersionInfo.h
  include/jellyfin/model/OAIVideo3DFormat.h
  include/jellyfin/model/OAIVideoRange.h
  include/jellyfin/model/OAIVideoRangeType.h
  include/jellyfin/model/OAIVideoType.h
  include/jellyfin/model/OAIVirtualFolderInfo.h
  include/jellyfin/model/OAIWakeOnLanInfo.h
  include/jellyfin/model/OAIWebSocketMessage.h
  include/jellyfin/model/OAIXbmcMetadataOptions.h

  include/jellyfin/api/OAIActivityLogApi.h
  include/jellyfin/api/OAIApiKeyApi.h
  include/jellyfin/api/OAIArtistsApi.h
  include/jellyfin/api/OAIAudioApi.h
  include/jellyfin/api/OAIBrandingApi.h
  include/jellyfin/api/OAIChannelsApi.h
  include/jellyfin/api/OAIClientLogApi.h
  include/jellyfin/api/OAICollectionApi.h
  include/jellyfin/api/OAIConfigurationApi.h
  include/jellyfin/api/OAIDashboardApi.h
  include/jellyfin/api/OAIDevicesApi.h
  include/jellyfin/api/OAIDisplayPreferencesApi.h
  include/jellyfin/api/OAIDynamicHlsApi.h
  include/jellyfin/api/OAIEnvironmentApi.h
  include/jellyfin/api/OAIFilterApi.h
  include/jellyfin/api/OAIGenresApi.h
  include/jellyfin/api/OAIHlsSegmentApi.h
  include/jellyfin/api/OAIImageApi.h
  include/jellyfin/api/OAIInstantMixApi.h
  include/jellyfin/api/OAIItemLookupApi.h
  include/jellyfin/api/OAIItemRefreshApi.h
  include/jellyfin/api/OAIItemUpdateApi.h
  include/jellyfin/api/OAIItemsApi.h
  include/jellyfin/api/OAILibraryApi.h
  include/jellyfin/api/OAILibraryStructureApi.h
  include/jellyfin/api/OAILiveTvApi.h
  include/jellyfin/api/OAILocalizationApi.h
  include/jellyfin/api/OAILyricsApi.h
  include/jellyfin/api/OAIMediaInfoApi.h
  include/jellyfin/api/OAIMoviesApi.h
  include/jellyfin/api/OAIMusicGenresApi.h
  include/jellyfin/api/OAIPackageApi.h
  include/jellyfin/api/OAIPersonsApi.h
  include/jellyfin/api/OAIPlaylistsApi.h
  include/jellyfin/api/OAIPlaystateApi.h
  include/jellyfin/api/OAIPluginsApi.h
  include/jellyfin/api/OAIQuickConnectApi.h
  include/jellyfin/api/OAIRemoteImageApi.h
  include/jellyfin/api/OAIScheduledTasksApi.h
  include/jellyfin/api/OAISearchApi.h
  include/jellyfin/api/OAISessionApi.h
  include/jellyfin/api/OAIStartupApi.h
  include/jellyfin/api/OAIStudiosApi.h
  include/jellyfin/api/OAISubtitleApi.h
  include/jellyfin/api/OAISuggestionsApi.h
  include/jellyfin/api/OAISyncPlayApi.h
  include/jellyfin/api/OAISystemApi.h
  include/jellyfin/api/OAITimeSyncApi.h
  include/jellyfin/api/OAITmdbApi.h
  include/jellyfin/api/OAITrailersApi.h
  include/jellyfin/api/OAITrickplayApi.h
  include/jellyfin/api/OAITvShowsApi.h
  include/jellyfin/api/OAIUniversalAudioApi.h
  include/jellyfin/api/OAIUserApi.h
  include/jellyfin/api/OAIUserLibraryApi.h
  include/jellyfin/api/OAIUserViewsApi.h
  include/jellyfin/api/OAIVideoAttachmentsApi.h
  include/jellyfin/api/OAIVideosApi.h
  include/jellyfin/api/OAIYearsApi.h

  src/api/OAIActivityLogApi.cpp
  src/api/OAIApiKeyApi.cpp
  src/api/OAIArtistsApi.cpp
  src/api/OAIAudioApi.cpp
  src/api/OAIBrandingApi.cpp
  src/api/OAIChannelsApi.cpp
  src/api/OAIClientLogApi.cpp
  src/api/OAICollectionApi.cpp
  src/api/OAIConfigurationApi.cpp
  src/api/OAIDashboardApi.cpp
  src/api/OAIDevicesApi.cpp
  src/api/OAIDisplayPreferencesApi.cpp
  src/api/OAIDynamicHlsApi.cpp
  src/api/OAIEnvironmentApi.cpp
  src/api/OAIFilterApi.cpp
  src/api/OAIGenresApi.cpp
  src/api/OAIHlsSegmentApi.cpp
  src/api/OAIImageApi.cpp
  src/api/OAIInstantMixApi.cpp
  src/api/OAIItemLookupApi.cpp
  src/api/OAIItemRefreshApi.cpp
  src/api/OAIItemUpdateApi.cpp
  src/api/OAIItemsApi.cpp
  src/api/OAILibraryApi.cpp
  src/api/OAILibraryStructureApi.cpp
  src/api/OAILiveTvApi.cpp
  src/api/OAILocalizationApi.cpp
  src/api/OAILyricsApi.cpp
  src/api/OAIMediaInfoApi.cpp
  src/api/OAIMoviesApi.cpp
  src/api/OAIMusicGenresApi.cpp
  src/api/OAIPackageApi.cpp
  src/api/OAIPersonsApi.cpp
  src/api/OAIPlaylistsApi.cpp
  src/api/OAIPlaystateApi.cpp
  src/api/OAIPluginsApi.cpp
  src/api/OAIQuickConnectApi.cpp
  src/api/OAIRemoteImageApi.cpp
  src/api/OAIScheduledTasksApi.cpp
  src/api/OAISearchApi.cpp
  src/api/OAISessionApi.cpp
  src/api/OAIStartupApi.cpp
  src/api/OAIStudiosApi.cpp
  src/api/OAISubtitleApi.cpp
  src/api/OAISuggestionsApi.cpp
  src/api/OAISyncPlayApi.cpp
  src/api/OAISystemApi.cpp
  src/api/OAITimeSyncApi.cpp
  src/api/OAITmdbApi.cpp
  src/api/OAITrailersApi.cpp
  src/api/OAITrickplayApi.cpp
  src/api/OAITvShowsApi.cpp
  src/api/OAIUniversalAudioApi.cpp
  src/api/OAIUserApi.cpp
  src/api/OAIUserLibraryApi.cpp
  src/api/OAIUserViewsApi.cpp
  src/api/OAIVideoAttachmentsApi.cpp
  src/api/OAIVideosApi.cpp
  src/api/OAIYearsApi.cpp

  src/json.cpp
  src/model.cpp

)

target_include_directories(${PROJECT_NAME} PUBLIC include)
target_compile_options(${PROJECT_NAME} PRIVATE -Wno-deprecated-declarations)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
    core
    json_helper
    ncrequest::ncrequest
    error
)