[package]
name = "qcm-plugin-jellyfin"
version = "0.1.0"
authors = ["hypengw <hypengwip@gmail.com>"]
edition = "2021"

[dependencies]
qcm-core = { git = "https://github.com/hypengw/QcmBackend.git" }
log = "0.4"
sea-orm = { version = "1" }
serde_json = { version = "1.0" }
chrono = { version = "0.4" }
reqwest = { version = "0.12" }

jellyfin-api = { path = "./jellyfin-api" }
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = "1"

rust-embed = { version = "8.6", features = ["interpolate-folder-path"] }
